--- a/sass/inicio/_mainInicio.scss
+++ b/sass/inicio/_mainInicio.scss
@@ -35,6 +35,9 @@ main {
 .carousel-inner {
     display: none;
 }
+.carousel-control-next-icon {
+    display: none;
+}
 .imagenesMobile {
     display: block;
     display: flex;
