--- a/CSS/style.css
+++ b/CSS/style.css
@@ -507,7 +507,7 @@ main {
 /*----------------SISTEMA RESPONSIVO CONTACTO-------------*/
 @media (max-width: 525px) {
   .MainContacto {
-    background-image: url(../../images/contacto/contactomobile.jpg);
+    background-image: url(../images/contacto/contactomobile.jpg);
   }
   .formcontactoNombre, .formcontactoEmail, .formcontactoMensaje {
     width: 100%;
