--- a/sass/contacto/_maincontacto.scss
+++ b/sass/contacto/_maincontacto.scss
@@ -8,7 +8,8 @@
     position: relative;
     .formContacto form {
         width: 100%;
-        text-align: center;
+        max-width: 400px;
+        margin: 0 auto;
     }
     .formcontactoNombre {
         margin-top: 70px;
@@ -18,7 +19,7 @@
         background-color:rgba(255, 255, 255, 0.4);
         border: 1px solid grey;
         height: 35px;
-        width: 400px;
+        width: 100%;
         padding: 10px;
         font-family: fuenteHelvetica;
         border-radius: 4px;
@@ -26,7 +27,7 @@
     .formcontactoMensaje {
         font-size: 15px;
         background-color: rgba(255, 255, 255, 0.4);
-        width: 400px;
+        width: 100%;
         padding: 10px;
         border-radius: 4px;
     }
@@ -50,6 +51,9 @@
         }
     .formcontactoNombre , .formcontactoEmail , .formcontactoMensaje {
         width: 100%;
+    }
+    .formContacto form {
+        padding: 0 5%;
     }
 }
 
