--- a/sass/_headerNav.scss
+++ b/sass/_headerNav.scss
@@ -122,12 +122,16 @@
     .LogoHeader h4 a {
         font-size: 25px;
         line-height: 85px;
+
         }
     .checktn {
         font-size: 25px;
         line-height: 70px;
+        margin-top: 9.5px;
     }
     #navBar {
         margin-top: 0;
+        align-items: start;
     }
+
 }
