--- a/sass/inicio/_mainInicio.scss
+++ b/sass/inicio/_mainInicio.scss
@@ -32,7 +32,7 @@ main {
     margin-bottom: 20px;
     margin-top: 40px;
 }
-.carousel-inner {
+#carouselExampleFade {
     display: none;
 }
 .carousel-control-next-icon {
