--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -16,6 +16,7 @@
         color: #1416B8;
         text-align: left;
         flex-direction: column;
+        margin-left: 10px ;
         p {
             margin-bottom: 0;
             font-size: 10px;
